fixed the z-index of serveral components

--- a/src/components/techcolofon/techcolofon.scss
+++ b/src/components/techcolofon/techcolofon.scss
@@ -11,6 +11,7 @@
     transition: margin-left 1s;
     top:30%;
     left:0;
+    z-index: 999;
     cursor: pointer;
     & > span {
         position: absolute;
